<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.app.zuludin.detail.MovieDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:textColor="#cc000000"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/detail_synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="4"
            android:text="@{viewModel.detail.overview}"
            app:layout_constraintTop_toBottomOf="@+id/synopsis" />

        <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:text="@string/country"
            android:textColor="#cc000000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_synopsis" />

        <TextView
            android:id="@+id/detail_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@{viewModel.country}"
            app:layout_constraintEnd_toEndOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/country" />

        <TextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:text="@string/language"
            android:textColor="#cc000000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/detail_synopsis" />

        <TextView
            android:id="@+id/detail_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@{viewModel.detail.originalLanguage}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/country" />

        <TextView
            android:id="@+id/director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:text="@string/director"
            android:textColor="#cc000000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_country" />

        <TextView
            android:id="@+id/detail_director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@{viewModel.director}"
            app:layout_constraintEnd_toEndOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/director" />

        <TextView
            android:id="@+id/revenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:text="@string/revenue"
            android:textColor="#cc000000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/detail_language" />

        <TextView
            android:id="@+id/detail_revenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@{String.valueOf(viewModel.detail.revenue)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/revenue" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            app:layout_constraintTop_toBottomOf="@+id/detail_revenue" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="193dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>